Fix checklbox and radio jump bug

--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_00-forms.scss
@@ -67,6 +67,7 @@
 }
 
 @mixin customOptions{
+	position: relative;
 	input{
 		//hide the normal inputs
 		position: absolute;
