--- a/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_01-textfields.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-atoms/03-forms/_01-textfields.scss
@@ -17,6 +17,12 @@
 		@include textInput;
 	}
 }
+.js-form-type-number{
+	input.form-number{
+		@include textInput;
+		max-width: 150px;
+	}
+}
 .js-form-type-tel.form-tel{
 	input{
 		@include textInput;
